# gamegame

./: .dockerignore  CHANGELOG.md  Dockerfile  brick-breaker.cabal  cabal.project.freeze  fly.toml  fourmolu.yaml  peli.cabal
.github/workflows/: build-client.yaml
client/: Main.hs
lib/: Lib.hs
server/: Main.hs
