cabal-version:   3.4
name:            brick-breaker
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          Olli Kortelahti
maintainer:      ollikortelahti@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
  exposed-modules:  Lib
  build-depends:
    , aeson
    , base   ^>=4.18.0.0
    , text
    , microlens
    , microlens-th

  hs-source-dirs:   lib
  default-language: GHC2021

common warnings
  ghc-options: -Wall

executable brick-breaker-client
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , aeson
    , async
    , base           ^>=4.18.0.0
    , brick-breaker
    , brick
    , bytestring
    , microlens
    , microlens-mtl
    , microlens-th
    , text
    , text-zipper
    , time
    , vty
    , websockets

  hs-source-dirs:   client
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable brick-breaker-server
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , aeson
    , base            ^>=4.18.0.0
    , brick-breaker
    , http-types
    , text
    , wai
    , wai-websockets
    , warp
    , websockets

  hs-source-dirs:   server
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
