cabal-version:   3.8
name:            peli
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          Olli Kortelahti
maintainer:      ollikortelahti@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
  exposed-modules:  Lib
  build-depends:
    , aeson
    , base          ^>=4.18.0.0
    , microlens
    , microlens-th
    , text

  hs-source-dirs:   lib
  default-language: GHC2021

common warnings
  ghc-options: -Wall

executable peli-client
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , aeson
    , async
    , base           ^>=4.18.0.0
    , brick
    , peli
    , bytestring
    , microlens
    , microlens-mtl
    , microlens-th
    , text
    , text-zipper
    , time
    , vty
    , vty-unix
    , websockets

  hs-source-dirs:   client
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable peli-server
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , aeson
    , base            ^>=4.18.0.0
    , peli
    , http-types
    , text
    , wai
    , wai-websockets
    , warp
    , websockets

  hs-source-dirs:   server
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
